apps/grim-backend/overlays/production/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grim-backend
spec:
  replicas: 1
